--- a/MicroRabbit/MicroRabbit.Domain.Core/MicroRabbit.Domain.Core.csproj
+++ b/MicroRabbit/MicroRabbit.Domain.Core/MicroRabbit.Domain.Core.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Events\" />
-    <Folder Include="Bus\" />
+    <PackageReference Include="MediatR" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
